--- a/prueba-tecnica-front/package.json
+++ b/prueba-tecnica-front/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@swimlane/ngx-charts": "^20.1.0",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-annotation": "^2.0.1",
+    "ng2-charts": "^4.0.1",
+    "ngx-color-picker": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,6 +31,8 @@
     "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/d3": "^7.4.0",
+    "@types/d3-scale": "^4.0.2",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
